fix title, block spacing

--- a/blocks/business/__container/business__container.css
+++ b/blocks/business/__container/business__container.css
@@ -1,4 +1,4 @@
 .business__container {
-    margin: 0 0 0 118px;
-    flex: 1 1 0%;
+  display: flex;
+  flex-direction: column;
 }
