--- a/blocks/business/__title/business__title.css
+++ b/blocks/business/__title/business__title.css
@@ -1,12 +1,10 @@
 .business__title {
-    width: 518px;
-    
+    max-width: 430px;
     font-family: "Avenir Next";
     font-style: normal;
     font-weight: 600;
     font-size: 40px;
     line-height: 124.1%;
-
     color: #00376E;
     margin: 0;
 }
