--- a/blocks/clients/__wrapper/clients__wrapper.css
+++ b/blocks/clients/__wrapper/clients__wrapper.css
@@ -1,5 +1,5 @@
 .clients__wrapper {
-    max-width: 970px;
+    max-width: 1217px;
     padding: 104px 0 122px 0;
     margin: 0 auto;
 }
