--- a/blocks/company/__container/company__container.css
+++ b/blocks/company/__container/company__container.css
@@ -1,3 +1,3 @@
 .company__container {
-    margin: 0 32px 0 0;
+    /*margin: 0 32px 0 0;*/
 }
