--- a/blocks/experience/__wrapper/experience__wrapper.css
+++ b/blocks/experience/__wrapper/experience__wrapper.css
@@ -1,6 +1,6 @@
 .experience__wrapper {
   display: flex;
-  justify-content: start;
+  justify-content: space-around;
   align-items: center;
   padding: 25px 0;
   max-width: 1217px;
