--- a/blocks/individual/__wrapper/individual__wrapper.css
+++ b/blocks/individual/__wrapper/individual__wrapper.css
@@ -1,7 +1,7 @@
 .individual__wrapper {
-    max-width: 1217px;
-    margin: 0 auto;
+  max-width: 1217px;
+  margin: 0 auto;
   display: flex;
-  justify-content: start;
+  justify-content: space-around;
   padding: 70px 0 120px;
 }
