--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -1,5 +1,6 @@
 .title {
-    font: 600 2.5em/1.3 'Avenir Next', Arial, sans-serif;
+    font: normal 600 2.5em/1.3 'Avenir Next', Arial, sans-serif;
     color: #00376E;
     margin: 0;
+    text-align: center;
 }
